# gpt.rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
configs/: model.json  (+1 more)
crates/gpt-rs/: Cargo.toml
crates/gpt-rs-backend-c/: Cargo.toml
crates/gpt-rs-backend-c/src/: dtype.rs  labels.rs  lib.rs  targets.rs
crates/gpt-rs-backend-c/src/codegen/: mod.rs  profile.rs  types.rs  utils.rs  value_info.rs
crates/gpt-rs-backend-c/src/codegen/emit/: control_flow.rs  conv.rs  dot.rs  elementwise.rs  gather_scatter.rs  mod.rs  reduce.rs  rng.rs  shape.rs
crates/gpt-rs-backend-c/src/kernels/: api.inc.c  compute.inc.c  mod.rs  pack.inc.c  preamble.inc.c  ukernel_16.inc.c  ukernel_32.inc.c  ukernel_48.inc.c  ukernel_64.inc.c  ukernel_misc.inc.c
crates/gpt-rs-backend-c/src/optimizer/: conv2d.rs  elementwise.rs  mod.rs  pipeline.rs  utils.rs
crates/gpt-rs-backend-c/tests/: backend_suite.rs  codegen.rs
crates/gpt-rs-backend-faer/: Cargo.toml
crates/gpt-rs-backend-faer/src/: lib.rs  optimizer.rs
crates/gpt-rs-backend-faer/tests/: backend_suite.rs
crates/gpt-rs-backend-ref-cpu/: Cargo.toml
crates/gpt-rs-backend-ref-cpu/src/: cpu.rs  lib.rs
crates/gpt-rs-backend-ref-cpu/tests/: backend_suite.rs
crates/gpt-rs-backend-tests/: Cargo.toml
crates/gpt-rs-backend-tests/src/: api_invariants.rs  lib.rs  recording_backend.rs  smoke.rs
crates/gpt-rs-backend-tests/src/torch_parity/: arithmetic.rs  attention.rs  common.rs  device_layers.rs  embedding_layer.rs  feed_forward_layer.rs  functional_ops.rs  gated_feed_forward_layer.rs  harness.rs  layer_norm_layer.rs  linear.rs  matmul.rs  mod.rs  multi_head_attention_layer.rs  rms_norm_layer.rs  rotary_ops.rs  vision_ops.rs
crates/gpt-rs-backend-triton/: Cargo.toml
crates/gpt-rs-backend-triton/src/: artifact.rs  artifact_cache.rs  bundle.rs  codegen.rs  compiler.rs  device.rs  kernels.rs  lib.rs  runtime.rs  targets.rs  tensor.rs
crates/gpt-rs-backend-triton/src/codegen/: hint_lowering.rs
crates/gpt-rs-backend-triton/src/codegen/validate/: custom.rs  dot.rs  elementwise.rs  mod.rs  reduction.rs  shape.rs
crates/gpt-rs-backend-triton/src/kernels/: compare_si32_i1.triton  dot_bias_rank2_f32.triton  dynamic_slice_f32_rank4.triton  dynamic_slice_si32_rank1.triton  dynamic_update_slice_f32_rank4.triton  elementwise_binary_f32.triton  elementwise_unary_f32.triton  extract_patches_nhwc_f32.triton  iota_si32_rank4.triton  matmul_f32.triton  sample_argmax_last_axis_f32.triton  sample_temperature_last_axis_f32.triton  softmax_last_axis_f32.triton  transpose_f32_rank5.triton
crates/gpt-rs-backend-triton/src/optimizer/: fusion.rs  fusion_policy.rs  layer_norm_fusion.rs  mod.rs  pipeline.rs  rewrite_utils.rs  softmax_fusion.rs  utils.rs
crates/gpt-rs-backend-triton/src/runtime/: blas.rs  executor.rs  fused_dot_epilogue.rs  fused_elementwise.rs  kernel_cache.rs  layer_norm.rs  literals.rs  sampling.rs  slots.rs  softmax.rs  values.rs
crates/gpt-rs-backend-triton/tests/: backend_suite.rs  bufferization_artifact.rs  conversion_consistency.rs  custom_kernel_matching.rs  decode_sampling.rs  dynamic_ops_gpu.rs  hint_lowering.rs  kernel_registry.rs
crates/gpt-rs-c-runtime/: Cargo.toml
crates/gpt-rs-c-runtime/src/: lib.rs
crates/gpt-rs-cli/: Cargo.toml
crates/gpt-rs-cli/src/: main.rs
crates/gpt-rs-cli/src/benchmark/: compile_freeze.rs  mod.rs
crates/gpt-rs-cli/tests/: compile_freeze.rs
crates/gpt-rs-macros/: Cargo.toml
crates/gpt-rs-macros/src/: lib.rs
crates/gpt-rs-py/: Cargo.toml  README.md  pyproject.toml  test_install.py
crates/gpt-rs-py/examples/: basic_usage.py  comparison_torch.py
crates/gpt-rs-py/python/gpt_rs/: __init__.py  functional.py  gpt.py  model.py  nn.py  vision.py
crates/gpt-rs-py/src/: backend.rs  debug.rs  device_ops.rs  functional.rs  gpt.rs  lib.rs  nn.rs  runtime.rs  tensor.rs  tokenizer.rs  vision.rs
crates/gpt-rs-py/tests/: test_functional_ops.py  test_nn_layers.py  test_tensor_interop.py
crates/gpt-rs/examples/: README.md  runtime_override.rs
crates/gpt-rs/src/: env.rs  layout.rs  lib.rs  module.rs  params.rs  profiling.rs
crates/gpt-rs/src/backend/: driver.rs  hashing.rs  index.rs  ir_query.rs  mod.rs  op_signature.rs  param_resolver.rs  pattern.rs  pipeline.rs  ptir_utils.rs  registry.rs  rewriter.rs  shape_helpers.rs  spec.rs  text_ir.rs  topology.rs
crates/gpt-rs/src/checkpoint/: loader.rs  mod.rs  saver.rs
crates/gpt-rs/src/inference/: generate.rs  mod.rs  sampler.rs
crates/gpt-rs/src/io/: mod.rs  tensor_archive.rs
crates/gpt-rs/src/model/: config.rs  conv.rs  gpt.rs  ministral.rs  mobilenet_v2.rs  mod.rs  registry.rs  resnet.rs
crates/gpt-rs/src/nn/: activations.rs  mod.rs
crates/gpt-rs/src/ops/: mod.rs
crates/gpt-rs/src/runtime/: handle.rs  loader.rs  mod.rs  namespace.rs  types.rs
crates/gpt-rs/src/tensor/: backend_bridge.rs  device_tensor.rs  dtype.rs  host_tensor.rs  lazy_tensor.rs  mod.rs  shape.rs  spec_utils.rs  storage.rs
crates/gpt-rs/src/tokenizer/: bpe.rs  mod.rs  model.rs
crates/gpt-rs/src/train/: mod.rs  optim.rs  schedule.rs  trainer.rs
crates/gpt-rs/src/vision/: mod.rs
crates/gpt-rs/tests/: backend_passes.rs  backend_registry.rs  backend_shape_helpers.rs  backend_shared_utils.rs  bufferize.rs  checkpoint.rs  decode_kv_cache_plan_cache.rs  functional_softmax.rs  generate_gpu_decode_sampling.rs  graph_cache_stability.rs  lazy_graph.rs  lit_support.rs  ministral.rs  model.rs  pass_lit_dedup.rs  pass_lit_elementwise.rs  pass_lit_param_only_fold_to_param.rs  pass_lit_reshape.rs  pass_lit_slice.rs  pass_lit_transpose.rs  pattern_macro_generation.rs  profiling.rs  profiling_exports.rs  profiling_kpi.rs  ptir_conversion.rs  ptir_driver.rs  ptir_dsl.rs  ptir_indices.rs  ptir_ir.rs  ptir_pattern_macro.rs  ptir_patterns.rs  ptir_rewriter.rs  ptir_snippet.rs  ptir_template_matcher.rs  runtime_overrides.rs  runtime_weight_streaming_loader.rs  tokenizer.rs  torch_parity.rs  weight_streaming.rs
crates/gpt-rs/tests/fixtures/: dedup.lit  elementwise.lit  param_only_fold_to_param.lit  reshape.lit  slice.lit  transpose.lit
(+148 files in other folders)
