[package]
name = "gpt-rs-backend-c"
version = "0.1.0"
edition = "2021"

[features]
default = []
conversion-c = []
torch = ["gpt-rs-backend-tests/torch"]

[dependencies]
gpt-rs = { path = "../gpt-rs" }
libloading = "0.8"
bincode = { workspace = true }

[dev-dependencies]
gpt-rs-backend-tests = { path = "../gpt-rs-backend-tests" }
