[package]
name = "gpt-rs-backend-c"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "C backend for executing gpt-rs portable tensor IR (PTIR)."

[features]
default = []
conversion-c = []
torch = ["gpt-rs-backend-tests/torch"]

[dependencies]
gpt-rs = { path = "../gpt-rs", version = "0.1.0" }
libloading = "0.8"
bincode = { workspace = true }
linkme = "0.3"

[dev-dependencies]
gpt-rs-backend-tests = { path = "../gpt-rs-backend-tests", version = "0.1.0" }
