[package]
name = "gpt-rs-backend-faer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "faer-based CPU backend for gpt-rs portable tensor IR (PTIR)."

[features]
default = []
torch = ["gpt-rs-backend-tests/torch"]

[dependencies]
faer = "0.23"
gpt-rs = { path = "../gpt-rs", version = "0.1.0" }
gpt-rs-backend-ref-cpu = { path = "../gpt-rs-backend-ref-cpu", version = "0.1.0" }

[dev-dependencies]
gpt-rs-backend-tests = { path = "../gpt-rs-backend-tests", version = "0.1.0" }
