[package]
name = "gpt-rs-backend-ref-cpu"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Reference CPU backend for gpt-rs portable tensor IR (PTIR)."

[features]
default = []
torch = ["gpt-rs-backend-tests/torch"]

[dependencies]
gpt-rs = { path = "../gpt-rs", version = "0.1.0" }
libm = "0.2"
linkme = "0.3"

[dev-dependencies]
gpt-rs-backend-tests = { path = "../gpt-rs-backend-tests", version = "0.1.0" }
