[package]
name = "gpt-rs-backend-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Test and torch-parity harness for gpt-rs backends."
publish = false

[features]
default = []
torch = ["dep:tch"]

[dependencies]
anyhow = { workspace = true }
gpt-rs = { path = "../gpt-rs", version = "0.1.0" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tch = { version = "0.13", optional = true, features = ["download-libtorch"] }
libc = "0.2"
