[package]
name = "gpt-rs-backend-triton"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Triton backend bootstrap for executing gpt-rs portable tensor IR (PTIR)."

[dependencies]
gpt-rs = { path = "../gpt-rs", version = "0.1.0" }
gpt-rs-backend-ref-cpu = { path = "../gpt-rs-backend-ref-cpu", version = "0.1.0" }
linkme = "0.3"

[features]
default = []
