[package]
name = "gpt-rs-backend-triton"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Triton backend bootstrap for executing gpt-rs portable tensor IR (PTIR)."

[dependencies]
gpt-rs = { path = "../gpt-rs", version = "0.1.0" }
linkme = "0.3"
libloading = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
default = []
torch = ["gpt-rs-backend-tests/torch"]

[dev-dependencies]
gpt-rs-backend-tests = { path = "../gpt-rs-backend-tests", version = "0.1.0" }
