[package]
name = "gpt-rs-c-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "C ABI runtime for executing gpt-rs portable tensor IR (PTIR)."

[lib]
crate-type = ["cdylib"]

[dependencies]
gpt-rs = { path = "../gpt-rs", version = "0.1.0" }
gpt-rs-backend-ref-cpu = { path = "../gpt-rs-backend-ref-cpu", version = "0.1.0" }
serde_json = { workspace = true }
