[package]
name = "gpt-rs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for running gpt-rs models and PTIR programs."

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.3"
gpt-rs = { path = "../gpt-rs", version = "0.1.0" }
gpt-rs-backend-c = { path = "../gpt-rs-backend-c", version = "0.1.0", optional = true, default-features = false }
gpt-rs-backend-faer = { path = "../gpt-rs-backend-faer", version = "0.1.0" }
serde_json = { workspace = true }

[features]
conversion-c = ["dep:gpt-rs-backend-c", "gpt-rs-backend-c/conversion-c"]
profiler = ["gpt-rs/profiler"]
