[package]
name = "gpt-rs-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Proc macros for gpt-rs (PTIR patterns and capture helpers)."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit-mut"] }
