[package]
name = "gpt-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Portable tensor IR, runtime, and reference models."

[features]
default = []
profiler = []
torch = ["gpt-rs-backend-tests/torch"]

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = "1"
gpt-rs-macros = { path = "../gpt-rs-macros", version = "0.1.0" }
lru = "0.12"
bincode = "1"
smallvec = "1"
half = "2.6"
once_cell = "1"
linkme = "0.3"
blake3 = "1.5"

[dev-dependencies]
gpt-rs-backend-ref-cpu = { path = "../gpt-rs-backend-ref-cpu", version = "0.1.0" }
gpt-rs-backend-tests = { path = "../gpt-rs-backend-tests", version = "0.1.0" }
